# isimip-utils

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  docs.yaml
docs/: examples.md  index.md  prerequisites.md  releases.md
docs/api/: checksum.md  decorators.md  exceptions.md  extractions.md  parameters.md  patterns.md  plot.md  utils.md
docs/assets/: extra.css
docs/reference/: cli.md  config.md  fetch.md  files.md  index.md  netcdf.md  pandas.md  protocol.md  xarray.md
examples/: create_dataset.py  extract_points.py  mask_country.py
isimip_utils/: __init__.py  checksum.py  cli.py  config.py  decorators.py  exceptions.py  extractions.py  fetch.py  files.py  netcdf.py  pandas.py  parameters.py  parser.py  patterns.py  plot.py  protocol.py  utils.py  xarray.py
isimip_utils/tests/: constants.py  helper.py  test_checksum.py  test_cli.py  test_extractions.py  test_fetch.py  test_files.py  test_netcdf.py  test_pandas.py  test_parameters.py  test_patterns.py  test_plot.py  test_protocol.py  test_utils.py  test_xarray.py
requirements/: common.txt  dev.txt
testing/: download.py  setup.py  setup.sh
