[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools_scm"]

[project]
name = "isimip-utils"
authors = [
    { name = "Jochen Klar", email = "jochen.klar@pik-potsdam.de" },
]
maintainers = [
    { name = "Jochen Klar", email = "jochen.klar@pik-potsdam.de" },
]
description = "This package contains common functionality for different ISIMIP tools."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dependencies = [
    "python-dotenv",
    "requests",
    "rich",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ISI-MIP/isimip-utils"

[project.optional-dependencies]
all = [
    "isimip-utils[netcdf,plots,shapes,xarray,dev,pytest,docs]"
]
recommended = [
    "isimip-utils[netcdf,plots,shapes,xarray]"
]
netcdf = [
    "netCDF4"
]
plots = [
    "altair[all]",
    "palettable",
]
shapes = [
    "geopandas",
    "rioxarray",
]
xarray = [
    "xarray"
]
dev = [
    "build",
    "pre-commit",
    "ruff",
    "twine",
]
pytest = [
    "pytest",
    "pytest-cov"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
]

[tool.setuptools]
packages = ["isimip_utils"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "PGH",  # pygrep-hooks
    "RUF",  # ruff
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "RUF012", # mutable-class-default
]

[tool.ruff.lint.isort]
known-first-party = [
    "isimip_utils"
]
section-order = [
    "future",
    "standard-library",
    "pytest",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.isort.sections]
pytest = ["pytest"]

[tool.typos.default.extend-words]
iy = "iy"
