[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools_scm"]

[project]
name = "isimip-utils"
authors = [
    { name = "Jochen Klar", email = "jochen.klar@pik-potsdam.de" },
]
maintainers = [
    { name = "Jochen Klar", email = "jochen.klar@pik-potsdam.de" },
]
description = "This package contains common functionality for different ISIMIP tools."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dependencies = [
    "python-dotenv",
    "requests",
    "rich",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ISI-MIP/isimip-utils"

[project.optional-dependencies]
all = [
    "isimip-utils[netcdf,plots,shapes,xarray,dev,pytest,docs]"
]
recommended = [
    "isimip-utils[netcdf,plots,shapes,xarray]"
]
netcdf = [
    "netCDF4~=1.7"
]
plots = [
    "altair[all]~=6.0",
    "palettable~=3.3",
]
shapes = [
    "geopandas~=1.1",
    "rioxarray>=0.19",
]
xarray = [
    "cftime~=1.6",
    "xarray>=2025.11"
]
pytest = [
    "pytest~=9.0",
    "pytest-cov~=7.0"
]
dev = [
    "build",
    "pre-commit",
    "ruff",
    "twine",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
]

[tool.setuptools]
packages = ["isimip_utils"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "PGH",  # pygrep-hooks
    "RUF",  # ruff
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "RUF012", # mutable-class-default
]

[tool.ruff.lint.isort]
known-first-party = [
    "isimip_utils"
]
section-order = [
    "future",
    "standard-library",
    "pytest",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.isort.sections]
pytest = ["pytest"]

[tool.typos.default.extend-words]
iy = "iy"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except PackageNotFoundError:",
    "except requests.exceptions.ConnectionError",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise RuntimeError"
]
