[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "isimip-utils"
authors = [
    { name = "Jochen Klar", email = "jochen.klar@pik-potsdam.de" },
]
maintainers = [
    { name = "Jochen Klar", email = "jochen.klar@pik-potsdam.de" },
]
description = "This package contains common functionality for different ISIMIP tools."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "python-dotenv",
    "requests",
    "rich",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ISI-MIP/isimip-utils"

[project.optional-dependencies]
all = [
    "isimip-utils[netcdf,altair,geopandas,xarray,dev,pytest,docs]"
]
recommended = [
    "isimip-utils[netcdf,altair,geopandas,xarray]"
]
netcdf = [
    "netCDF4~=1.7"
]
altair = [
    "altair[all]~=6.0",
    "palettable~=3.3",
]
geopandas = [
    "geopandas~=1.1",
    "rioxarray>=0.19",
]
xarray = [
    "cftime~=1.6",
    "xarray>=2025.11"
]
pytest = [
    "pytest~=9.0",
    "pytest-cov~=7.0"
]
dev = [
    "build",
    "pre-commit",
    "ruff",
    "twine",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["isimip_utils"]
exclude = ["isimip_utils/tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "PGH",  # pygrep-hooks
    "RUF",  # ruff
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "RUF012", # mutable-class-default
]

[tool.ruff.lint.isort]
known-first-party = [
    "isimip_utils"
]
section-order = [
    "future",
    "standard-library",
    "pytest",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.isort.sections]
pytest = ["pytest"]

[tool.typos.default.extend-words]
iy = "iy"
arange = "arange"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except PackageNotFoundError:",
    "except requests.exceptions.ConnectionError",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise RuntimeError"
]
